--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,5 +1,12 @@
 <div class="container">
-  <h1>Our Courses</h1>
-  <p>Explore our range of courses designed to improve digital literacy.</p>
-  <!-- Add more content here -->
+  <h1>Welcome to Senior Digital Literacy</h1>
+  <p>This web application is designed to help seniors improve their digital skills!</p>
+
+  <!-- Course buttons -->
+  <div class="courses">
+    <a href="<%= phone_course_path %>" class="button">Phone Course</a>
+    <a href="<%= tv_course_path %>" class="button">TV Course</a>
+    <a href="<%= computer_course_path %>" class="button">Computer Course</a>
+  </div>
 </div>
+  
