--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,16 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="main-layout">
+      <header>
+        <h1>Senior Digital Literacy</h1>
+      </header>
+      <div class="content">
+        <%= yield %>
+      </div>
+      <footer>
+        <p>© 2024 Senior Digital Literacy. All rights reserved.</p>
+      </footer>
+    </div>
   </body>
 </html>
