--- a/app/views/courses/tv_lessons/tv_voice.html.erb
+++ b/app/views/courses/tv_lessons/tv_voice.html.erb
@@ -18,7 +18,6 @@
 
       <p>Using voice commands can make navigating the TV easier, especially when searching for content or controlling basic settings. Just remember to press and hold the <strong>Voice Control button</strong> while speaking your command, and release it once you've finished.</p>
 
-      <p>That covers the basics of using voice commands to control your TV. Either return to all lessons or move on to the next lesson to learn about additional features!</p>
 
       <!-- Add quiz here -->
       <div class="quiz-container">
@@ -97,7 +96,7 @@
   }
 
   .quiz-container button {
-    display: block;
+    display: inline-block;
     margin: 5px 0;
     padding: 10px;
     border: none;
