--- a/app/views/courses/tv_lessons/tv_settings.html.erb
+++ b/app/views/courses/tv_lessons/tv_settings.html.erb
@@ -97,7 +97,7 @@
   }
 
   .quiz-container button {
-    display: block;
+    display: inline-block;
     margin: 5px 0;
     padding: 10px;
     border: none;
